# justpic

./: Cargo.toml
apps/backend/: Cargo.toml
apps/backend/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
migrations/: 20251124190740_init.sql
pkgs/database/: Cargo.toml
pkgs/database/src/: database.rs  lib.rs
pkgs/storage/: Cargo.toml
pkgs/storage/src/: lib.rs  storage.rs
src/: config.rs  database.rs  docs.rs  error.rs  lib.rs  main.rs  state.rs  storage.rs
src/auth/: mod.rs
src/auth/cookie/: create.rs  mod.rs  remove.rs
src/auth/sessions/: create.rs  extract.rs  mod.rs  remove.rs
src/database/: mod.rs  sqlite.rs
src/database/repositories/: mod.rs
src/database/repositories/sessions/: fetch_by_id.rs  insert.rs  mod.rs  remove.rs
src/database/repositories/users/: delete.rs  fetch_by_id.rs  fetch_by_session_id.rs  fetch_by_username.rs  insert.rs  mod.rs  update_password.rs  update_username.rs
src/database/schemas/: cards.rs  mod.rs  sessions.rs  users.rs
src/handlers/: cards.rs  files.rs  mod.rs
src/handlers/docs/: cards.rs
src/models/: error.rs  mod.rs
src/models/auth/: login.rs  register.rs
src/models/base/: message.rs
src/models/cards/: api.rs  builder.rs  internal.rs  mod.rs
src/models/files/: api.rs  internal.rs  mod.rs  state.rs  uploading.rs
src/models/primitives/: message.rs
src/models/sessions/: internal.rs  mod.rs
src/models/sessions/requests/: create.rs
src/models/users/: change_password.rs  change_username.rs  delete.rs  internal.rs  mod.rs  role.rs
src/models/users/requests/: change_password.rs  create.rs  mod.rs
src/models/users/responses/: common.rs
src/repositories/: mod.rs
src/repositories/cards/: insert.rs  mod.rs
src/repositories/files/: insert.rs  update.rs
src/repositories/sessions/: delete.rs  fetch.rs  get.rs  insert.rs  update.rs
src/repositories/users/: fetch.rs  get.rs  insert.rs  mod.rs  update.rs
src/routes/: auth.rs  cards.rs  mod.rs  ping.rs  users.rs
src/routes/auth/: login.rs  logout.rs  mod.rs  register.rs
src/routes/cards/: create.rs  mod.rs
src/routes/docs/: auth.rs  files.rs  mod.rs  users.rs
src/routes/files/: get.rs  mod.rs
src/routes/users/: change_me_password.rs  change_me_username.rs  change_password.rs  change_username.rs  fetch_by_session.rs  fetch_by_username.rs  fetch_me.rs  mod.rs
src/sessions/: domain.rs  guards.rs  handler.rs  http.rs  mod.rs  models.rs  queries.rs
src/types/: pagination.rs
src/users/: domain.rs  handler.rs  mod.rs  models.rs  queries.rs
src/util/: cookie.rs  crypto.rs  file_key.rs  mod.rs  multipart.rs  stream.rs  unid.rs  validation.rs
src/utils/: crypto.rs  file_key.rs  multipart.rs  stream.rs  unid.rs
tests/: session.rs  user.rs
