[package]
name = "justpic-backend"
version = "0.1.0"
edition = "2024"
description = "Justpic backend app"

[dependencies]
# Actix
actix-web = "4.11.0"
actix-multipart = "0.7.2"
actix-cors = "0.7.1"
# Futures
async-trait = "0.1.89"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
tokio-util = "0.7.16"
# Database
sqlx = { version = "0.8.5", features = ["runtime-tokio", "sqlite", "migrate"] }
# Serialization
serde = "1.0.219"
serde_json = "1.0.140"
# Utils
rand = "0.9.2"
uuid = "1.17.0"
base64 = "0.22.1"
derive_more = { version = "2.0.1", features = ["from", "display"] }
validator = "0.19"
# Docs
utoipa = { version = "5.4.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
# Logging
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[lints.clippy]
bool_to_int_with_if = "warn"
borrow_as_ptr = "warn"
cfg_not_test = "warn"
clear_with_drain = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
dbg_macro = "warn"
default_trait_access = "warn"
explicit_iter_loop = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
format_push_string = "warn"
get_unwrap = "warn"
large_include_file = "warn"
large_stack_arrays = "warn"
manual_assert = "warn"
manual_instant_elapsed = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
map_unwrap_or = "warn"
match_bool = "warn"
needless_collect = "warn"
negative_feature_names = "warn"
non_std_lazy_statics = "warn"
pathbuf_init_then_push = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
redundant_feature_names = "warn"
redundant_type_annotations = "warn"
todo = "warn"
too_many_arguments = "allow"
uninlined_format_args = "warn"
unnested_or_patterns = "warn"
wildcard_dependencies = "warn"

[profile.release]
opt-level = "s"
strip = true
lto = true
panic = "abort"
codegen-units = 1

[profile.dev.package.sqlx-macros]
opt-level = 3