[package]
name = "justpic-backend"
version = "0.1.0"
edition.workspace = true
description = "Justpic backend app"

[dependencies]
# Todo: move backend only crates to this Cargo.toml file

# Actix
actix-web = { workspace = true }
actix-multipart = { workspace = true }
actix-cors = { workspace = true }

# Futures
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs", "io-util"] }
tokio-util = { workspace = true }

# Utils
derive_more = { workspace = true, features = ["from", "display"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Docs
utoipa = { workspace = true, features = ["actix_extras"] }
utoipa-swagger-ui = { workspace = true, features = ["actix-web"] }

[lints]
workspace = true